all fields described. simplified the interfaces a bit
